[package]
name = "blockish-player"
version = "0.0.2"
authors = ["yazgoo <yazgoo@gmail.com>"]
edition = "2018"
license = "MIT"
description = "wrapper to play videos in the terminal with unicode chars"
readme = "README.md"
homepage = "https://github.com/yazgoo/blockish-player"
repository = "https://github.com/yazgoo/blockish-player"
keywords = ["unicode", "video", "player"]
categories = ["command-line-utilities"]

[lib]
path = "src/lib.rs"

[dependencies]
regex = "1.3"
glob = "0.3"
crossterm = "0.14"
